# network-quantification

./: README.md
nq/: .env  README.md  pyproject.toml
nq-gnns/: README.md  pyproject.toml
nq-gnns/configs/: quantify.yaml  train.yaml
nq-gnns/configs/callbacks/: early_stopping.yaml  model_checkpoint.yaml
nq-gnns/configs/dataset/: genius.yaml  questions.yaml  toloker.yaml  twitch.yaml
nq-gnns/configs/dataset/loaders/: default.yaml
nq-gnns/configs/debug/: default.yaml
nq-gnns/configs/experiment/: cora-0-vs-all.yaml  cora-1-vs-all.yaml  cora-2-vs-all.yaml  cora-3-vs-all.yaml  cora-4-vs-all.yaml  cora-5-vs-all.yaml  cora-6-vs-all.yaml  genius.yaml  questions.yaml  toloker.yaml  twitch.yaml
nq-gnns/configs/extras/: default.yaml
nq-gnns/configs/hydra/: default.yaml  quantification.yaml
nq-gnns/configs/model/: default.yaml
nq-gnns/configs/model/network/: gat.yaml  gcn.yaml  gin.yaml
nq-gnns/configs/paths/: default.yaml
nq-gnns/configs/trainer/: default.yaml
nq-gnns/data/splits/cora-0-vs-all/: calibration_masks.pt  test_masks.pt  training_masks.pt  validation_masks.pt
nq-gnns/data/splits/cora-1-vs-all/: calibration_masks.pt  test_masks.pt  training_masks.pt  validation_masks.pt
nq-gnns/data/splits/cora-2-vs-all/: test_masks.pt  training_masks.pt
nq-gnns/data/splits/cora-3-vs-all/: calibration_masks.pt  test_masks.pt  training_masks.pt  validation_masks.pt
nq-gnns/data/splits/cora-4-vs-all/: calibration_masks.pt  test_masks.pt  (+2 more)
nq-gnns/src/netquant/: __init__.py  quantify.py  train.py
nq/configs/: quantify.yaml  train.yaml
nq/configs/dataset/: amazon.yaml  cora-binary.yaml  cora.yaml  flickr.yaml  genius.yaml  questions.yaml  toloker.yaml  twitch.yaml
nq/configs/hydra/: quantify.yaml  train.yaml
nq/configs/paths/: default.yaml
nq/src/nq/: quantify.py  settings.py  train.py
(+78 files in other folders)
